Fluent Form: prevent editors "jumping" in one column mode (#26095)

--- a/packages/devextreme/scss/widgets/base/_form.scss
+++ b/packages/devextreme/scss/widgets/base/_form.scss
@@ -19,10 +19,6 @@
     .dx-form-group .dx-single-column-item-content > .dx-first-row.dx-col-0.dx-field-item {
       padding-top: 0;
     }
-
-    .dx-box-item:not(:first-child) .dx-single-column-item-content > .dx-field-item {
-      padding-top: 10px;
-    }
   }
 
   .dx-label-h-align {
